--- a/css/main.css
+++ b/css/main.css
@@ -1,41 +1,252 @@
-body {
-	margin: 60px auto;
-	width: 70%;
-}
-nav ul, footer ul {
-	font-family:'Helvetica', 'Arial', 'Sans-Serif';
-	padding: 0px;
-	list-style: none;
-	font-weight:bold;
-}
-nav ul li, footer ul li {
-	display: inline;
-	margin-right: 20px;
-}
-a {
+#top-nav a {
 	text-decoration: none;
-	color: #999;
+	color: #000000;
 }
-a:hover {
+
+#top-nav a:hover {
+	background-color: #000000;
+	color: #ffffff;
+}
+
+#page a {
+	text-decoration: none;
+	color: #000000;
+}
+
+#logo-symbol:hover {
+	background-color: #000000;
+	color: #ffffff;
+}
+
+.archive-item:hover {
+	background-color: #000000;
+	color: #ffffff;
+}
+
+#post-body a {
 	text-decoration: underline;
+	color: #000000;
 }
-h1 {
-	font-size: 3em;
-	font-family:'Helvetica', 'Arial', 'Sans-Serif';
+
+#post-body a:hover {
+	background-color: #000000;
+	text-decoration: underline;
+	color: #ffffff;
 }
-p {
-	font-size: 1.5em;
-	line-height: 1.4em;
-	color: #333;
+
+#bottom-nav a {
+	text-decoration: none;
+	color: #000000;
 }
-footer {
-	border-top: 1px solid #d5d5d5;
-	font-size: .8em;
+
+#bottom-nav a:hover {
+	background-color: #000000;
+	color: #ffffff;
 }
-ul.posts {
-	margin: 20px auto 40px;
-	font-size: 1.5em;
+
+#bottom-nav ul {
+	text-align: justify;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
 }
-ul.posts li {
-	list-style: none;
+
+#bottom-nav ul:after {
+	content: '';
+	width: 100%;
+	display: inline-block;
+}
+
+#bottom-nav li {
+	display: inline-block;
+}
+
+#logo-atomic-number {
+	position: absolute;
+	top: 7px;
+	left: 14px;
+	font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+	font-size: 30px;
+}
+
+#logo-symbol {
+	position: absolute;
+	top: 0px;
+	width: 128px;
+	height: 128px;
+	line-height: 128px;
+	font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+	font-size: 60px;
+	text-align: center;
+	border: 5px solid #000000;
+}
+
+#logo-atomic-weight {
+	position: absolute;
+	top: 0px;
+	width: 138px;
+	font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+	font-size: 30px;
+	text-align: center;
+	padding-top: 92px;
+}
+
+#page {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 1280px;
+}
+
+#top-nav {
+	position: absolute;
+	right: 0%;
+	top: 108px;
+	font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+	font-size: 30px;
+}
+
+#header-rule {
+	position: absolute;
+	top: 145px;
+	width: 100%;
+	height: 5px;
+	background-color: #000000;
+}
+
+#date {
+	position: absolute;
+	top: 177px;
+	left: 0px;
+	width: 146px;
+	font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+	font-size: 40px;
+	text-align: left;
+}
+
+#post {
+	position: absolute;
+	top: 177px;
+	left: 155px;
+	right: 0%;
+}
+
+#post-title {
+	width: 100%;
+	font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+	font-size: 40px;
+	font-weight: bold;
+}
+
+#post-body {
+	width: 100%;
+	font-size: 24px;
+	line-height: 36px;
+}
+
+#post-body p {
+	margin-top: 2%;
+}
+
+#archive-list {
+	position: absolute;
+	top: 177px;
+	width: 100%;
+	font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+	font-size: 40px;
+}
+
+.archive-item {
+	position: relative;
+	width: 100%;
+	margin-bottom: 13px;
+}
+
+.archive-date {
+	position: absolute;
+	left: 0px;
+	width: 146px;
+}
+
+.archive-title {
+	position: relative;
+	margin-left: 155px;
+	font-weight: bold;
+}
+
+#bottom-rule {
+	width: 100%;
+	height: 5px;
+	background-color: #000000;
+}
+
+#bottom-nav {
+	font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+	font-size: 30px;
+}
+
+@media only screen and (min-width: 785px) and (max-width: 1296px) {
+	#page {
+		width: 768px;
+	}
+}
+
+@media only screen and (min-width: 337px) and (max-width: 784px) {
+	#page {
+		width: 100%;
+	}
+
+	#date {
+		top: 0px;
+		left: 100%;
+		transform: translateX(-100%);
+		text-align: right;
+	}
+
+	#post {
+		left: 0%;
+	}
+
+	.archive-item {
+		margin-bottom: 50px;
+	}
+
+	.archive-date {
+		position: static;
+	}
+
+	.archive-title {
+		position: static;
+		margin-left: 0px;
+	}
+}
+
+@media only screen and (max-width: 336px) {
+	#page {
+		width: 320px;
+	}
+
+	#date {
+		top: 0px;
+		left: 100%;
+		transform: translateX(-100%);
+		text-align: right;
+	}
+
+	#post {
+		left: 0%;
+	}
+
+	.archive-item {
+		margin-bottom: 50px;
+	}
+
+	.archive-date {
+		position: static;
+	}
+
+	.archive-title {
+		position: static;
+		margin-left: 0px;
+	}
 }
